[project]
name = "crypto-fundraising"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "groq>=0.9",
    "sqlmodel>=0.0.19",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.ruff]
line-length = 100
